pick_word function changed after review

--- a/dlnd_tv_script_generation.html
+++ b/dlnd_tv_script_generation.html
@@ -11786,7 +11786,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[76]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -11817,7 +11817,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[77]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">view_sentence_range</span> <span class="o">=</span> <span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="mi">10</span><span class="p">)</span>
@@ -11904,7 +11904,7 @@ Barney_Gumble: Yeah, you should only drink to enhance your social skills.
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[78]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
@@ -12781,7 +12781,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[125]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12820,7 +12820,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[126]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">get_tensors</span><span class="p">(</span><span class="n">loaded_graph</span><span class="p">):</span>
@@ -12872,7 +12872,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[127]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">pick_word</span><span class="p">(</span><span class="n">probabilities</span><span class="p">,</span> <span class="n">int_to_vocab</span><span class="p">):</span>
@@ -12883,8 +12883,7 @@ Model Trained and Saved
 <span class="sd">    :return: String of the predicted word</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># TODO: Implement Function</span>
-    <span class="n">idx</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">argmin</span><span class="p">(</span><span class="n">probabilities</span><span class="p">)</span>
-    <span class="k">return</span> <span class="n">int_to_vocab</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">idx</span><span class="p">)</span>
+    <span class="k">return</span> <span class="n">int_to_vocab</span><span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">choice</span><span class="p">(</span><span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">probabilities</span><span class="p">)),</span> <span class="n">p</span><span class="o">=</span><span class="n">probabilities</span><span class="p">)]</span>
 
 
 <span class="sd">&quot;&quot;&quot;</span>
@@ -12926,7 +12925,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[128]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">gen_length</span> <span class="o">=</span> <span class="mi">200</span>
@@ -12987,7 +12986,21 @@ Model Trained and Saved
 <div class="prompt"></div>
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>moe_szyslak: beginning fourth mail louie: suppose wondering duff_announcer: intrigued agent_miller: genius stillwater: drown nascar bleeding follow nope laid suppose beauty sweetheart nope freak dreamed nope nope nope sweetheart freaking carlotta: reminded artie_ziff: nope freaking hurry steamed knockin&#39; nope aww original fighting laid retain fell sweetheart original alls intrigued fourth yells fat_tony: medical yells freak yells combination original manjula suppose weirder laid promised knockin&#39; nope promised knockin&#39; medical feed spending freak nope nope laid original promised promised knockin&#39; closer fat_tony: single promised yells original promised pointed freak freak freak suppose fabulous guttural nope yells fat_tony: realize suppose supposed nope promised knockin&#39; pridesters: chuckling suppose eaten eaten clears bid learned steamed agent_miller: suppose eaten single promised busted retain young_marge: eaten suppose suppose falsetto coherent sweetheart eaten favor jacques: runs medical nope nope shan&#39;t suppose suppose suppose menlo honored nope promised shoots sweetheart original founded promised stage original renew laid sweetheart promised busted laid original medical soap cleveland man_with_crazy_beard: medical losing nope intelligent nope waitin&#39; waitin&#39; sweetheart nope nope nope busted freak nope freak intelligent freak suppose menlo weirder nope nope nope nope nope steamed nope knockin&#39; eaten nope freaking nope nope pleading original promised fourth scientists skydiving man_with_crazy_beard: laid menlo deserve nope nope
+<pre>moe_szyslak: aw jeez, i gotta say the years seats he read an application?(chuckles) can i show off me really back!
+
+
+patrons:(talk-sings) great&#34; my precious drinkin&#39;.
+moe_szyslak: uh, the castle is!
+homer_simpson:(super mother) oh, why don&#39;t you are the wrong of hurt, loud.
+homer_simpson: barney are you thinking!
+homer_simpson: america.
+jacques: wow! i&#39;ll help me a boat
+moe_szyslak:...
+carl_carlson:(&#34; lenny so slick&#34;. oh, wait is my peach are hurt. give me all close.
+moe_szyslak:(very self-satisfied) that is a barter here for homer simpson.
+moe_szyslak:(pissed) oh, right! bart! hold up bless me as a beer.
+moe_szyslak: aw, moe&#39;s tavern, huh. like the foibles you gave to see certified.
+homer_simpson: hey, knock it off... ehhhhhh don&#39;t get up with the beer and they&#39;ll, this is a new little secrets, here.(lying) you let me
 </pre>
 </div>
 </div>
